# manibook

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  components.json  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: HomeDialogs.tsx  HomeHeader.tsx  HomeMain.tsx  command-palette.tsx  confirmation-dialog.tsx  dock-menu.tsx  floating-scroll-buttons.tsx  info-card.tsx  language-switcher.tsx  library-sidebar.tsx  theme-toggle.tsx
contexts/: DialogContext.tsx  DocumentActionsContext.tsx  ImportContext.tsx  LibraryContext.tsx
hooks/: use-bulk-operations.ts  use-debounced-filters.ts  use-debounced-search.ts  use-document-filters.ts  use-document-handlers.ts  (+9 more)
lib/: db.ts  (+10 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: document.rs  library.rs  library_ops.rs  logs.rs  mod.rs  settings.rs
src-tauri/src/config/: library.rs  llm.rs  mod.rs
src-tauri/src/diesel/: models.rs  schema.rs
src-tauri/src/extractors/: djvu.rs  epub.rs  mod.rs  pdf.rs
src-tauri/src/models/: document.rs  library.rs  llm.rs  mod.rs  models_dev.rs
src-tauri/src/services/: connection_manager.rs  cover.rs  database.rs  import.rs  llm.rs  migrations.rs  mod.rs  models_dev.rs  storage.rs
src-tauri/src/utils/: content.rs  database.rs  image.rs  mod.rs  path.rs  settings.rs  text.rs
(+54 files in other folders)
