[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-http = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
lazy_static = "1.4"
lru = "0.12"
pdfium-render = { version = "0.8", features = ["image", "thread_safe", "sync"] }
image = { version = "0.25", features = ["webp"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["process"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
regex = "1.0"
sha256 = "1.0"
nanoid = "0.4"
epub-parser = "0.3.4"
webp = "0.3.1"
serde_rusqlite = "0.40"
